kubernetes/infrastructure/storage/rook-ceph/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    app.kubernetes.io/name: rook-ceph
    app.kubernetes.io/instance: enterprise
    environment: production
    tier: storage
