kubernetes/infrastructure/storage/rook-ceph/base/toolbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-ceph-tools
  namespace: rook-ceph
  labels:
    app: rook-ceph-tools
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-tools
  template:
    metadata:
      labels:
        app: rook-ceph-tools
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: rook-ceph-tools
          image: quay.io/ceph/ceph:v19.2.3@sha256:af0c5903e901e329adabe219dfc8d0c3efc1f05102a753902f33ee16c26b6cee
          command:
            - /bin/bash
            - -c
            - |
              echo "Ceph Toolbox Ready"
              tail -f /dev/null
          volumeMounts:
            - mountPath: /etc/ceph
              name: ceph-config
      volumes:
        - name: ceph-config
          emptyDir: {}
        - name: mon-config
          secret:
            secretName: rook-ceph-config
        - name: ceph-admin-keyring
          secret:
            secretName: rook-ceph-admin-keyring
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
