kubernetes/infrastructure/storage/rook-ceph/base/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-tailscale
  namespace: rook-ceph
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: rook-ceph-mgr-dashboard
      port:
        number: 7000
  tls:
    - hosts:
        - ceph
